--- a/src/components/dashboard/index.html
+++ b/src/components/dashboard/index.html
@@ -14,73 +14,57 @@
 
     <body>
         <header class="header">
-                <div><a href="index.html">Inicio</a></div>
-                <div><a href="quem-somos.html">Quem somos</a></div>
-                <div><a href="index.html#hospedagem">Hospedagem</a></div>
-                <div><a href="#contato">Contatos</a></div>
-                <div><a href="#contato">Pontos Turisticos   </a></div>
+                <div><a href="#">Inicio</a></div>
+                <div><a href="../quem-somos/view.html">Quem somos</a></div>
+                <div><a href="../hospedagem/view.html">Hospedagem</a></div>
+                <div><a href="../contato/view.html">Contatos</a></div>
+                <div><a href="../pontos-turisticos/view.html">Pontos Turisticos</a></div>
         </header>
 
-        <body>
-            <div class="row">
-                <header class="pagina-titulo">
-                    <div class="barra1 col-md-1">
-                        <h1>.</h1>
-                    </div>
-                    <div class="col-md-2">
-                        <a href="index.html"><img class="logo center-block" src="imagens/logo.jpg"></a>
-                    </div>
-                    <div class="barra2 col-md-9">
-                        <h1 class="text-center">Teresópolis Adventure</h1>
-                    </div>
-                </header>
+        <body class="container">
+
+            <div class="titulo">
+                <h1>Teresópolis Adventure</h1>
             </div>
     
-            <div class="row">
-                <div class="col-md-12">
-                    <img class="principal img-responsive center-block" src="imagens/principal.jpg" alt="">
+            <div>
+                <div>
+                    <img class="principal img-responsive center-block" src="../../assets/images/principal.jpg" alt="">
                 </div>
             </div>
     
-        </div>
     
-        <div class="container">
-    
-            <div class="row">
-                <h2>Você sabia que Teresópolis é a Capital Nacional do Montanhismo?</h2>
-            </div>
-    
-            <div class="row">
-                <p class="text-responsive">Teresópolis é a cidade mais alta do estado do Rio de Janeiro, a 871 metros e
+            <div class="texto">
+                <div class="row">
+                    <h2>Você sabia que Teresópolis é a Capital Nacional do Montanhismo?</h2>
+                </div>
+        
+                <div>
+                    
+                    <p>Teresópolis é a cidade mais alta do estado do Rio de Janeiro, a 871 metros e
                     ostenta as mais baixas
-                    temperaturas entre os municípios fluminense.</p>
-                <p>Para os aventureiros, a principal atração é o Parque Nacional da Serra dos Órgãos, que abriga o Pico Dedo
-                    de Deus – a cidade tem a melhor estrutura para quem visita o parque e não quer gastar
-                    muito com camping, albergue e guias. Os adeptos de caminhadas pela mata se esbaldam na famosa
-                    travessia Petrópolis-Teresópolis, que tem 30 km, é feita normalmente em 3 dias e passa por
-                    cachoeiras e piscinas naturais.</p>
+                    temperaturas entre os municípios fluminense.
+                    Para os aventureiros, a principal atração é o Parque Nacional da Serra dos Órgãos, que abriga o Pico Dedo
+                        de Deus – a cidade tem a melhor estrutura para quem visita o parque e não quer gastar
+                        muito com camping, albergue e guias. Os adeptos de caminhadas pela mata se esbaldam na famosa
+                        travessia Petrópolis-Teresópolis, que tem 30 km, é feita normalmente em 3 dias e passa por
+                        cachoeiras e piscinas naturais.
+                    </p>
+                </div>
             </div>
         </body>
 
         <footer>
-            <div>
-                <img class="center-block" class="logo" src="../../assets/images/nv_logo.png" />
-            </div>
-            <div>
-                <div class="orgao">
-                    <img class="center-block" src="../../assets/images/uiaa1.png" alt="">
-                    <p>&copy; 2020. Teresopolis Adventure</p>
-                </div>
+            <div class="orgao">
+                <p>&copy; 2020. Teresopolis Adventure</p>
             </div>
             <div class="">
                 <ul class="contato" id="contato">
                     <li>Telefone: (21)2643-3036</li>
                     <li>Email: tereadventure@gmail.com</li>
-                    <li>Endereço: <a href="https://www.google.com.br/maps?q= Varzea nº211 Centro, Teresóplis - RJ"
-                            target="_blank"> Varzea nº211 Centro, Teresópolis - RJ</a></li>
                 </ul>
             </div>
-        </footer>
+        </footer>   
         
         <script src="./script/index.js"></script>
 
