--- a/src/components/quem-somos/view.html
+++ b/src/components/quem-somos/view.html
@@ -13,48 +13,31 @@
             <header class="header">
                 <div><a href="../dashboard/index.html">Inicio</a></div>
                 <div><a href="#">Quem somos</a></div>
-                <div><a href="#">Hospedagem</a></div>
-                <div><a href="#">Contatos</a></div>
-                <div><a href="#">Pontos Turisticos</a></div>
+                <div><a href="../hospedagem/view.html">Hospedagem</a></div>
+                <div><a href="../contato/view.html">Contatos</a></div>
+                <div><a href="../pontos-turisticos/view.html">Pontos Turisticos</a></div>
             </header>
-            <div>
-                <h2> Contato </h2>
-                <p>
-                    Criado em 2002, o SerraTec também tem o apoio dos governos municipais das três cidades, além de
-                    entidades e instituições de ensino. O SerraTec abriga nas 3 cidades empresas nacionais e
-                    multinacionais, modernos laboratórios e centros de pesquisa, espaços de coworking e o que há de mais
-                    moderno em infraestrutura para o setor.
-                    A missão do SerraTec é tornar a região serrana fluminense uma referência ainda maior, atraindo novas
-                    empresas e fortalecendo as que já estão instaladas nestas 3 cidades, captando assim investimentos
-                    para o desenvolvimento regional e, não só isso, estando também no centro das principais inovações
-                    tecnológicas do país.
-                </p>
-                
-                <p>
-                    Esta iniciativa trará impactos positivos em direção à capacitação e profissionalização, atraindo
-                    empresas e incentivando novos negócios.
-                </p>
-                <form onsubmit="alerta()">
-                    
-                    <div></div>
-                    <label for="cemail">Email</label>
-                    <input type="email" id="cemail" placeholder="exemplo@exemplo.com" required>
-                    
-                    <label for="cassunto">Assunto</label>
-                    <input type="text" id="cassunto" required>
-                    
-                    <label for="cwhatsapp">Whatsapp</label>
-                    <input type="text" id="cwhatsapp" placeholder="+00 (00) 9 0000-0000" required>
-                    
-                    <label for="cmensagem">Mensagem</label>
-                    <input type="text" id="cmensagem" required>
+            
+            <div class="texto">
+                <h2>Quem Somos?</h2>
 
-                    <input type="submit">
-                </form>     
+                <p>
+                    Aventureiros e amantes da natureza desde cedo, nos apaixonamos por este fascinante estilo de vida. Iniciamos uma 
+                    série de viagens pela Europa e Estados Unidos. Visitamos dezenas de ginásios, dos mais antigos na França, aos mais 
+                    modernos na Califórnia, e de onde além de escalar e fazer trilhas, trouxemos novas ideias para montar a Teresópolis Adventure.
+                    Iniciamos apenas como uma loja de venda de equipamentos para pratica de hiking e climb com uma estrutura em formato 
+                    de ginásio para realização de treinamentos de escalada.
+                </p>
+                <p>
+                    Rapidamente a Teresópolis Adventure se tornou um sucesso e passamos a receber escaladores e aventureiros vindos de longe 
+                    para ter a oportunidade de treinar numa estrutura e recursos até então inéditos na cidade. Sempre inovando e buscando novas 
+                    tendências, em 2000 uma grande ampliação na prestação de serviços foi realizada, passamos a oferecer pacotes de passeios nas 
+                    mais belas e tradicionais montanhas da cidade.
+
+                    Mais do que vender produtos e serviços, nossa missão é fomentar a prática dos esportes de aventura e outdoor, e levá-lo 
+                    para a montanha, de forma que você possa curtir este fascinante esporte, independentemente do nível de seu objetivo.
+                </p>
             </div>
-
-            <script src="./index.js"></script>
-
             <footer>
                 <div class="orgao">
                     <p>&copy; 2020. Teresopolis Adventure</p>
