--- a/src/components/contato/view.html
+++ b/src/components/contato/view.html
@@ -12,28 +12,25 @@
             <!-- HEADER -->
             <header class="header">
                 <div><a href="../dashboard/index.html">Inicio</a></div>
-                <div><a href="#">Quem somos</a></div>
-                <div><a href="#">Hospedagem</a></div>
+                <div><a href="../quem-somos/view.html">Quem somos</a></div>
+                <div><a href="../hospedagem/view.html">Hospedagem</a></div>
                 <div><a href="#">Contatos</a></div>
-                <div><a href="#">Pontos Turisticos</a></div>
+                <div><a href="../pontos-turisticos/view.html">Pontos Turisticos</a></div>
             </header>
             <div class="body">
                 <div>
                     <h2> Contato </h2>
                     <p>
-                        Criado em 2002, o SerraTec também tem o apoio dos governos municipais das três cidades, além de
-                        entidades e instituições de ensino. O SerraTec abriga nas 3 cidades empresas nacionais e
-                        multinacionais, modernos laboratórios e centros de pesquisa, espaços de coworking e o que há de mais
-                        moderno em infraestrutura para o setor.
-                        A missão do SerraTec é tornar a região serrana fluminense uma referência ainda maior, atraindo novas
-                        empresas e fortalecendo as que já estão instaladas nestas 3 cidades, captando assim investimentos
-                        para o desenvolvimento regional e, não só isso, estando também no centro das principais inovações
-                        tecnológicas do país.
+                        Promover o esporte é impulsionar a alma a alcançar novos picos de superação, onde cada escalada se torna 
+                        uma metáfora da jornada humana rumo à excelência, desafiando limites e elevando-se ao topo das conquistas pessoais.
+                        Por isso nós incentivamos a ascensão de cada indivíduo, unindo forças para impulsionar o espírito de equipe, a coragem 
+                        e a perseverança, transformando cada montanha em um símbolo de vitória coletiva. Dito isso, estamos à disposição para 
+                        apoiar e guiar cada passo nessa jornada, celebrando juntos as conquistas alcançadas e inspirando um comprometimento contínuo com o espírito esportivo e as alturas inexploradas que aguardam nossa superação.
                     </p>
                     
                     <p>
                         Esta iniciativa trará impactos positivos em direção à capacitação e profissionalização, atraindo
-                        empresas e incentivando novos negócios.
+                        empresas e incentivando novos negócios. Nos envie um email! Estaremos te notificando das nossas atualizações.
                     </p>
                     
                 </div>
