--- a/src/components/global.css
+++ b/src/components/global.css
@@ -12,7 +12,6 @@ footer {
     background-color: #333;
     padding-top: 15px;
     position: relative;
-    position: fixed;
     bottom: 0;
     width: 100%;
     color:#fff;
@@ -82,6 +81,8 @@ body {
     color: #fff;
     padding: 15px;
     text-align: center;
+    height: 3vh;
+    margin: auto;
   }
   
   .header div {
@@ -101,3 +102,7 @@ body {
     padding-bottom: 3px;
   }
   
+  .texto{
+    padding: 50px;
+    margin-bottom: 50px;
+  }
