--- a/src/components/hospedagem/view.html
+++ b/src/components/hospedagem/view.html
@@ -5,55 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../global.css">
         <link rel="stylesheet" href="./style.css">
-        <title>Contato</title>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+        <title>Hospedagem</title>
     </head>
 
         <body>
             <!-- HEADER -->
             <header class="header">
                 <div><a href="../dashboard/index.html">Inicio</a></div>
-                <div><a href="#">Quem somos</a></div>
+                <div><a href="../quem-somos/view.html">Quem somos</a></div>
                 <div><a href="#">Hospedagem</a></div>
-                <div><a href="#">Contatos</a></div>
-                <div><a href="#">Pontos Turisticos</a></div>
+                <div><a href="../contato/view.html">Contatos</a></div>
+                <div><a href="../pontos-turisticos/view.html">Pontos Turisticos</a></div>
             </header>
-            <div>
-                <h2> Contato </h2>
-                <p>
-                    Criado em 2002, o SerraTec também tem o apoio dos governos municipais das três cidades, além de
-                    entidades e instituições de ensino. O SerraTec abriga nas 3 cidades empresas nacionais e
-                    multinacionais, modernos laboratórios e centros de pesquisa, espaços de coworking e o que há de mais
-                    moderno em infraestrutura para o setor.
-                    A missão do SerraTec é tornar a região serrana fluminense uma referência ainda maior, atraindo novas
-                    empresas e fortalecendo as que já estão instaladas nestas 3 cidades, captando assim investimentos
-                    para o desenvolvimento regional e, não só isso, estando também no centro das principais inovações
-                    tecnológicas do país.
-                </p>
-                
-                <p>
-                    Esta iniciativa trará impactos positivos em direção à capacitação e profissionalização, atraindo
-                    empresas e incentivando novos negócios.
-                </p>
-                <form onsubmit="alerta()">
-
-                    <label for="cemail">Email</label>
-                    <input type="email" id="cemail" placeholder="exemplo@exemplo.com" required>
-                    
-                    <label for="cassunto">Assunto</label>
-                    <input type="text" id="cassunto" required>
-                    
-                    <label for="cwhatsapp">Whatsapp</label>
-                    <input type="text" id="cwhatsapp" placeholder="+00 (00) 9 0000-0000" required>
-                    
-                    <label for="cmensagem">Mensagem</label>
-                    <input type="text" id="cmensagem" required>
-
-                    <input type="submit">
-                </form>     
+            <div class="div-do-mapa">
+                <div id="map"></div>
             </div>
-
-            <script src="./index.js"></script>
-
             <footer>
                 <div class="orgao">
                     <p>&copy; 2020. Teresopolis Adventure</p>
@@ -65,5 +32,8 @@
                     </ul>
                 </div>
             </footer>
+
+            <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+            <script src="./index.js"></script>
         </body>
 </html>
