--- a/src/components/pontos-turisticos/view.html
+++ b/src/components/pontos-turisticos/view.html
@@ -12,46 +12,15 @@
             <!-- HEADER -->
             <header class="header">
                 <div><a href="../dashboard/index.html">Inicio</a></div>
-                <div><a href="#">Quem somos</a></div>
-                <div><a href="#">Hospedagem</a></div>
-                <div><a href="#">Contatos</a></div>
+                <div><a href="../quem-somos/view.html">Quem somos</a></div>
+                <div><a href="../hospedagem/view.html">Hospedagem</a></div>
+                <div><a href="../contato/view.html">Contatos</a></div>
                 <div><a href="#">Pontos Turisticos</a></div>
             </header>
-            <div>
-                <h2> Contato </h2>
-                <p>
-                    Criado em 2002, o SerraTec também tem o apoio dos governos municipais das três cidades, além de
-                    entidades e instituições de ensino. O SerraTec abriga nas 3 cidades empresas nacionais e
-                    multinacionais, modernos laboratórios e centros de pesquisa, espaços de coworking e o que há de mais
-                    moderno em infraestrutura para o setor.
-                    A missão do SerraTec é tornar a região serrana fluminense uma referência ainda maior, atraindo novas
-                    empresas e fortalecendo as que já estão instaladas nestas 3 cidades, captando assim investimentos
-                    para o desenvolvimento regional e, não só isso, estando também no centro das principais inovações
-                    tecnológicas do país.
-                </p>
-                
-                <p>
-                    Esta iniciativa trará impactos positivos em direção à capacitação e profissionalização, atraindo
-                    empresas e incentivando novos negócios.
-                </p>
-                <form onsubmit="alerta()">
-                        
-                    <label for="cemail">Email</label>
-                    <input type="email" id="cemail" placeholder="exemplo@exemplo.com" required>
-                    
-                    <label for="cassunto">Assunto</label>
-                    <input type="text" id="cassunto" required>
-                    
-                    <label for="cwhatsapp">Whatsapp</label>
-                    <input type="text" id="cwhatsapp" placeholder="+00 (00) 9 0000-0000" required>
-                    
-                    <label for="cmensagem">Mensagem</label>
-                    <input type="text" id="cmensagem" required>
 
-                    <input type="submit">
-                </form>     
+            <div>  
             </div>
-
+            
             <script src="./index.js"></script>
 
             <footer>
