--- a/src/components/quem-somos/style.css
+++ b/src/components/quem-somos/style.css
@@ -56,4 +56,11 @@ input[type="submit"]:hover {
   background-color: #333;
 }
 
-  
+footer {
+  background-color: #333;
+  padding-top: 15px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  color:#fff;
+} 
