--- a/src/components/contato/view.html
+++ b/src/components/contato/view.html
@@ -19,7 +19,7 @@
             </header>
             <div class="body">
                 <div>
-                    <h2> Contato </h2>
+                    <h2 class="titulo"> Contato </h2>
                     <p>
                         Promover o esporte é impulsionar a alma a alcançar novos picos de superação, onde cada escalada se torna 
                         uma metáfora da jornada humana rumo à excelência, desafiando limites e elevando-se ao topo das conquistas pessoais.
