--- a/src/components/hospedagem/style.css
+++ b/src/components/hospedagem/style.css
@@ -72,3 +72,21 @@ footer {
   width: 100%;
   color:#fff;
 }
+
+.h2h2 { 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1%;
+}
+
+.imgs {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+img {
+  height: 32vh;
+  width: 26vw;
+}
