--- a/src/components/hospedagem/view.html
+++ b/src/components/hospedagem/view.html
@@ -20,6 +20,14 @@
             </header>
             <div class="div-do-mapa">
                 <div id="map"></div>
+                <div class="h2h2">
+                    <h4>Explore o mapa em busca do lugar ideal para você e sua família desfrutarem de uma estadia perfeita!</h4>
+                </div>
+                <div class="imgs">
+                    <img src="../../assets/images/img-hospedages/hotel-willisau.jpg" alt="hotel-willisau">
+                    <img src="../../assets/images/img-hospedages/athos-hotel.jpg" alt="athos-hotel">
+                    <img src="../../assets/images/img-hospedages/Intercity.jpg" alt="intercity">
+                </div>
             </div>
             <footer>
                 <div class="orgao">
