--- a/src/components/quem-somos/view.html
+++ b/src/components/quem-somos/view.html
@@ -17,9 +17,9 @@
                 <div><a href="../contato/view.html">Contatos</a></div>
                 <div><a href="../pontos-turisticos/view.html">Pontos Turisticos</a></div>
             </header>
-            
+
             <div class="texto">
-                <h2>Quem Somos?</h2>
+                <h2 class="titulo">Quem Somos?</h2>
 
                 <p>
                     Aventureiros e amantes da natureza desde cedo, nos apaixonamos por este fascinante estilo de vida. Iniciamos uma 
