--- a/src/components/global.css
+++ b/src/components/global.css
@@ -106,3 +106,9 @@ body {
     padding: 50px;
     margin-bottom: 50px;
   }
+
+  .titulo{
+    text-align: center;
+    padding: 30px;
+    margin-bottom: 20px;
+  }
