--- a/src/components/pontos-turisticos/view.html
+++ b/src/components/pontos-turisticos/view.html
@@ -18,10 +18,15 @@
                 <div><a href="#">Pontos Turisticos</a></div>
             </header>
 
-            <div>  
-            </div>
             
-            <script src="./index.js"></script>
+            <h2 class="titulo">Pontos Turísticos</h2>
+
+
+            <div class="video">  
+                <iframe width="420" height="315"
+                    src="https://www.youtube.com/embed/iOvEvl_8q0s?controls=1&mute=1">
+                </iframe>
+            </div>
 
             <footer>
                 <div class="orgao">
