last update for today

--- a/src/components/hospedagem/view.html
+++ b/src/components/hospedagem/view.html
@@ -32,7 +32,7 @@
             <footer>
                 <div class="orgao">
                     <p>&copy; 2020. Teresopolis Adventure</p>
-                </div>
+                </div>''
                 <div class="">
                     <ul class="contato" id="contato">
                         <li>Telefone: (21)2643-3036</li>
