--- a/src/components/quem-somos/view.html
+++ b/src/components/quem-somos/view.html
@@ -37,7 +37,13 @@
                     Mais do que vender produtos e serviços, nossa missão é fomentar a prática dos esportes de aventura e outdoor, e levá-lo 
                     para a montanha, de forma que você possa curtir este fascinante esporte, independentemente do nível de seu objetivo.
                 </p>
+
+                <div class="imgs">
+                    <img src="../../assets/images/quem-somos-parque.jpeg" alt="imagem serra dos órgãos">
+                </div>
             </div>
+
+            
             <footer>
                 <div class="orgao">
                     <p>&copy; 2020. Teresopolis Adventure</p>
