--- a/src/components/pontos-turisticos/style.css
+++ b/src/components/pontos-turisticos/style.css
@@ -55,3 +55,15 @@ input[type="submit"] {
 .video{
   text-align: center;
 } 
+
+img {
+  width: 30rem;
+  text-align: center;
+  padding: 15px 15px 0px 15px;
+}
+
+.imgs{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+} 
