--- a/src/components/pontos-turisticos/view.html
+++ b/src/components/pontos-turisticos/view.html
@@ -26,8 +26,37 @@
                 <iframe width="420" height="315"
                     src="https://www.youtube.com/embed/iOvEvl_8q0s?controls=1&mute=1">
                 </iframe>
+            </div><br><br>
+
+            <div class="imgs"> 
+                <div class="img">
+                    <img src="../../assets/images/pedra-tartaruga.jpg" alt="pedra da tartaruga">
+                    <h4>Pedra da Tartaruga</h4>
+                </div>
+                <div class="img">
+                    <img src="../../assets/images/Torres.jpg" alt="Torres de Bonsucesso">
+                    <h4>Torres de Bonsucesso</h4>
+                </div>
+                <div class="img">
+                    <img src="../../assets/images/cahoeira2.jpg" alt="Cahoreira da macumba">
+                    <h4>Cahoreira da Macumba</h4>
+                </div>
             </div>
 
+            <div class="imgs"> 
+                <div class="img">
+                    <img src="../../assets/images/Dedo.jpg" alt="Dedo de Deus">
+                    <h4>Dedo de Deus</h4>
+                </div>
+                <div class="img">
+                    <img src="../../assets/images/escalavrado1.jpg" alt="Escalavrado">
+                    <h4>Escalavrado</h4>
+                </div>
+                <div class="img">
+                    <img src="../../assets/images/sino.jpg" alt="Pedra do Sino">
+                    <h4>Pedra do Sino</h4>
+                </div>
+            </div><br><br>
             <footer>
                 <div class="orgao">
                     <p>&copy; 2020. Teresopolis Adventure</p>
@@ -40,4 +69,4 @@
                 </div>
             </footer>
         </body>
-</html>
+</html> 
