--- a/src/components/hospedagem/style.css
+++ b/src/components/hospedagem/style.css
@@ -69,6 +69,7 @@ footer {
   padding-top: 15px;
   position: fixed;
   bottom: 0;
+  height: 7.3 vh;
   width: 100%;
   color:#fff;
 }
@@ -82,11 +83,16 @@ footer {
 
 .imgs {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 img {
   height: 32vh;
   width: 26vw;
+  transition: 400ms;
+}
+img:hover {
+  height: 33vh;
+  width: 27vw;
 }
