--- a/src/components/hospedagem/view.html
+++ b/src/components/hospedagem/view.html
@@ -24,15 +24,15 @@
                     <h4>Explore o mapa em busca do lugar ideal para você e sua família desfrutarem de uma estadia perfeita!</h4>
                 </div>
                 <div class="imgs">
-                    <img src="../../assets/images/img-hospedages/hotel-willisau.jpg" alt="hotel-willisau">
-                    <img src="../../assets/images/img-hospedages/athos-hotel.jpg" alt="athos-hotel">
-                    <img src="../../assets/images/img-hospedages/Intercity.jpg" alt="intercity">
+                    <img src="../../assets/images/img-hospedages/hotel-willisau.jpg" alt="hotel-willisau" id="wil">
+                    <img src="../../assets/images/img-hospedages/athos-hotel.jpg" alt="athos-hotel" id="ath">
+                    <img src="../../assets/images/img-hospedages/Intercity.jpg" alt="intercity" id="int">
                 </div>
             </div>
             <footer>
                 <div class="orgao">
                     <p>&copy; 2020. Teresopolis Adventure</p>
-                </div>''
+                </div>
                 <div class="">
                     <ul class="contato" id="contato">
                         <li>Telefone: (21)2643-3036</li>
