--- a/src/components/hospedagem/style.css
+++ b/src/components/hospedagem/style.css
@@ -62,16 +62,8 @@ input[type="submit"]:hover {
 
 .div-do-mapa {
   height: 83.4vh;
-}
-
-footer {
-  background-color: #333;
-  padding-top: 15px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  color:#fff;
-}
+  margin-bottom: 20px;
+} 
 
 .h2h2 { 
   display: flex;
