--- a/src/components/hospedagem/view.html
+++ b/src/components/hospedagem/view.html
@@ -27,19 +27,22 @@
                     <img src="../../assets/images/img-hospedages/hotel-willisau.jpg" alt="hotel-willisau">
                     <img src="../../assets/images/img-hospedages/athos-hotel.jpg" alt="athos-hotel">
                     <img src="../../assets/images/img-hospedages/Intercity.jpg" alt="intercity">
+                    
+
                 </div>
             </div>
             <footer>
                 <div class="orgao">
                     <p>&copy; 2020. Teresopolis Adventure</p>
-                </div>''
-                <div class="">
+                </div>
+                <div class="footer">
                     <ul class="contato" id="contato">
                         <li>Telefone: (21)2643-3036</li>
                         <li>Email: tereadventure@gmail.com</li>
                     </ul>
                 </div>
             </footer>
+        
 
             <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
             <script src="./index.js"></script>
