--- a/src/components/pontos-turisticos/view.html
+++ b/src/components/pontos-turisticos/view.html
@@ -57,6 +57,15 @@
                     <h4>Pedra do Sino</h4>
                 </div>
             </div><br><br>
+
+            <div class="audio">
+                <h5>Ouça o som da Natureza</h5>
+                <audio autoplay="autoplay" controls="controls">
+                    <source src="../../assets/audio/passarinho.mp3" type="audio/mp3" />
+                    
+                    </audio>
+            </div>
+
             <footer>
                 <div class="orgao">
                     <p>&copy; 2020. Teresopolis Adventure</p>
