--- a/src/components/hospedagem/style.css
+++ b/src/components/hospedagem/style.css
@@ -76,16 +76,17 @@ input[type="submit"]:hover {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin: 20px;
 }
 
 img {
-  height: 32vh;
-  width: 26vw;
-  transition: 400ms;
+  height: 23vh;
+  width: 20vw;
 }
-img:hover {
-  height: 33vh;
-  width: 27vw;
+
+.corpo {
+  width: 100%;
+  height: 84vh;
 }
 
 footer {
